--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,6 +1,18 @@
 .formulario1 {
 
-   border-radius: 10px;
-   box-shadow: 0px 0px 10px 0px #28ca0b ;
-    position: center;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 0px #28ca0b ;
+     position: center;
+    
+ }
+ 
+.imgs{
+     background-color: #fff;
+    
+ }
+
+ body{
+    background-image: url("../assets/img/cicty.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
 }
