--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,7 +1,7 @@
 .formulario1 {
 
     border-radius: 10px;
-    box-shadow: 0px 0px 10px 0px #28ca0b ;
+    box-shadow: 0px 0px 5px 0px #28ca0b ;
      position: center;
     
  }
@@ -15,4 +15,36 @@
     background-image: url("../assets/img/cicty.jpg");
     background-repeat: no-repeat;
     background-size: 100% auto;
+    
+}
+
+
+
+.verde{
+
+    color: rgb(113, 180, 83);
+}
+
+.gris{
+
+    color: rgb(89, 89, 91);
+
+}
+
+.btn-verde{
+
+    background-color: rgb(113, 180, 83);
+  
+}
+
+
+
+.btn-verde:hover{
+
+    background-color:rgb(99, 250, 73) ;
+    
+}
+
+.titulos{
+    font-family: energym;
 }
