--- a/css/login.css
+++ b/css/login.css
@@ -24,3 +24,36 @@ body{
 
     color: rgb(113, 180, 83);
 }
+
+
+
+.btn-verde{
+
+    background-color: rgb(113, 180, 83);
+    border-bottom-right-radius:30px ;
+    border-top-left-radius: 30px;
+    box-shadow: 5px 0px 0px 0px rgb(97, 105, 96);
+  
+}
+
+
+.btn-gris{
+
+    background-color: rgb(89, 89, 91);
+    border-bottom-right-radius:30px ;
+    border-top-left-radius: 30px;
+    box-shadow: 5px 0px 0px 0px rgb(113, 180, 83)
+  
+}
+
+
+
+.btn-verde:hover{
+
+    background-color:rgb(99, 250, 73) ;
+    
+}
+
+.titulos{
+    font-family: energym;
+}
