--- a/css/formulario.css
+++ b/css/formulario.css
@@ -39,6 +39,24 @@
     box-shadow: 5px 0px 0px 0px rgb(97, 105, 96);
   
 }
+.btn-verde:hover{
+
+    background-color:rgb(99, 250, 73) ;
+    
+}
+.btn-rojo{
+
+    background-color: rgb(243, 79, 3);
+    border-bottom-right-radius:30px ;
+    border-top-left-radius: 30px;
+    box-shadow: 5px 0px 0px 0px rgb(97, 105, 96);
+  
+}
+.btn-rojo:hover{
+
+    background-color:rgba(248, 8, 8, 0.959) ;
+    
+}
 
 
 .btn-gris{
@@ -52,11 +70,7 @@
 
 
 
-.btn-verde:hover{
 
-    background-color:rgb(99, 250, 73) ;
-    
-}
 
 .titulos{
     font-family: energym;
@@ -69,9 +83,13 @@
 
 .texto{
 
-    font-family: arial;
-   font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+   font-size:12px;
    font-weight: bolder;
+}
+
+.fenergy{
+    font-family: energym;
 }
 
 .wrapper {
