--- a/css/formulario.css
+++ b/css/formulario.css
@@ -87,6 +87,12 @@
    font-size:12px;
    font-weight: bolder;
 }
+.textop{
+
+    font-family: Arial, Helvetica, sans-serif;
+   font-size:10px;
+   font-weight: bolder;
+}
 
 .fenergy{
     font-family: energym;
